--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <section class="ourport">
         <div class="container">
             <div class="portheader">
-                <h2>Our Portfolio</h2>
+                <h2>Portfolio</h2>
                 <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
                     consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
                     fugiat sit in iste officiis commodi quidem hic quas.
